[gd_scene load_steps=4 format=3 uid="uid://l2yqlgqkxvhq"]

[ext_resource type="Texture2D" uid="uid://djde684knobld" path="res://art/gray_overlay.png" id="1_d607a"]
[ext_resource type="Script" uid="uid://c56eiejihnmx2" path="res://scenes/overlay.gd" id="1_r2eog"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2eog"]

[node name="Overlay" type="Node2D" groups=["Overlay"]]
z_index = 2
script = ExtResource("1_r2eog")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_d607a")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_r2eog")

[node name="Shadow" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_d607a")

[node name="Shadow2" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_d607a")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
